...
                }
                .onDelete(perform: deleteShoes)
            }
            .navigationDestination(for: Shoe.self) { shoe in
                ShoeDetailView(shoe: shoe)
            }
            .navigationTitle("My Shoes")
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
                    Button {
                        showingSettings = true
                    } label: {
                        Label("Settings", systemImage: "gear")
...
